--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,10 @@
     <version>1.0-SNAPSHOT</version>
     <properties>
         <camel.version>2.11.0</camel.version>
-        <infinispan.version>5.1.6.FINAL</infinispan.version>
+        <!--<infinispan.version>5.1.6.FINAL</infinispan.version>-->
+        <infinispan.version>6.0.0.Alpha1</infinispan.version>
+        <mockito-version>1.9.5</mockito-version>
+        <junit-version>4.11</junit-version>
     </properties>
 
     <name>Camel-Infinispan Component</name>
@@ -39,6 +42,22 @@
             <version>${camel.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit-version}</version>
+        </dependency>
         <!-- logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -49,13 +68,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.6.1</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
